modify API dto